--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "dotenv": "^11.0.0",
     "express": "^4.17.2",
     "express-rate-limit": "^6.3.0",
+    "helmet": "^5.0.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.1.6",
     "morgan": "^1.10.0",
